--- a/package.json
+++ b/package.json
@@ -6,21 +6,22 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.31",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
+    "identity-obj-proxy": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --config jest.config.ts",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -42,6 +43,9 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2"
+    "@types/jest": "^29.5.1",
+    "jest": "^29.5.0",
+    "tailwindcss": "^3.3.2",
+    "ts-jest": "^29.1.0"
   }
 }
